--- a/package.json
+++ b/package.json
@@ -16,26 +16,26 @@
     "gatsby-plugin-offline": "^2.2.7",
     "gatsby-plugin-react-helmet": "^3.1.4",
     "gatsby-plugin-sharp": "^2.2.13",
-    "gatsby-plugin-typography": "^2.3.3",
+    "gatsby-plugin-styled-components": "^3.1.4",
     "gatsby-remark-copy-linked-files": "^2.1.7",
     "gatsby-remark-images": "^3.1.13",
     "gatsby-remark-prismjs": "^3.3.6",
     "gatsby-remark-responsive-iframe": "^2.2.5",
     "gatsby-remark-smartypants": "^2.1.3",
     "gatsby-source-filesystem": "^2.1.11",
+    "gatsby-source-instagram": "^0.5.1",
     "gatsby-transformer-remark": "^2.6.15",
     "gatsby-transformer-sharp": "^2.2.7",
     "prismjs": "^1.17.1",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
     "react-helmet": "^5.2.1",
-    "react-typography": "^0.16.19",
-    "typeface-merriweather": "0.0.72",
-    "typeface-montserrat": "0.0.75",
-    "typography": "^0.16.19",
-    "typography-theme-wordpress-2016": "^0.16.19"
+    "rebass": "^4.0.5",
+    "styled-components": "^4.3.2"
   },
   "devDependencies": {
+    "eslint-config-react-app": "^5.0.1",
+    "eslint-plugin-react-hooks": "^2.0.1",
     "prettier": "^1.18.2"
   },
   "homepage": "https://github.com/gatsbyjs/gatsby-starter-blog#readme",
