--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "version": "0.1.0",
   "author": "Art Pai <minipai@gmail.com>",
   "dependencies": {
+    "@babel/plugin-syntax-jsx": "^7.2.0",
     "@mdx-js/mdx": "^1.5.0",
     "@mdx-js/react": "^1.5.0",
     "gatsby": "^2.13.73",
